# bridge

./: .gitignore  .gitmodules  ADR-0001-chromium-backend-direction.md  ADR-0002-long-term-chromium-integration-options.md  ADR-0003-cef-alloy-spike-execution-plan.md  CHROMIUM-BAREBONES-MVP-PLAN.md  CHROMIUM-FIRST-RENDER-EXECUTION-CHECKLIST.md  CHROMIUM-RUNTIME-MVP-PLAN.md  DOCUMENT-BOUNDARY-PLAN.md  ENGINE-API-SPEC.md  GIT.md  IDENTITY.md  NEAR-TERM-EXECUTION-PLAN.md  README.md  WORKSPACE.md  bootstrap.ps1  bootstrap.sh  build.ps1  build.sh  cleanup-checklist-2026-04-05.md  compile.sh  notes.md  publish-plan-2026-04-05.md  refactor.md  startbrowser.sh
.github/workflows/: integration.yml
docs/: cef-runtime-host-windows-port-review-2026-04-06.md  core-extraction-checkpoint-2026-04-06-b.md  core-extraction-checkpoint-2026-04-06-c.md  core-extraction-checkpoint-2026-04-06-d.md  core-extraction-checkpoint-2026-04-06.md  current-architecture-overview.md  friend-alpha-implementation-queue-2026-04-05.md  friend-alpha-readiness-notes-2026-04-05.md  friend-alpha-readiness-plan.md  multi-os-migration-checklist-2026-04-06.md  multi-os-target-repo-structure-2026-04-06.md  planned-repository-structure-2026-04-06.md  runtime-host-alpha-readiness-2026-04-06.md  runtime-host-benchmark-sites-2026-04-06.md  runtime-host-chrome-slice-plan.md  runtime-host-profile-policy.md  runtime-host-real-site-polish-sweep-2026-04-05.md  runtime-host-real-site-sweep-results-2026-04-05.md  runtime-host-smooth-scrolling-notes-2026-04-06.md  runtime-host-tabs-checkpoint-2026-04-06.md  runtime-host-tabs-plan.md  runtime-host-workbench-plan.md  runtime-host-workbench-slice-a.md  windows-runtime-host-milestone-1.md
historical/: README.md
historical/2026-04-mvp-to-cef-pivot/: CHROMIUM-FIRST-RENDER-PLAN.md  DOCUMENT-BOUNDARY-PLAN.md  ENGINE-API-MIGRATION-MAP.md  ENGINE-API-SPEC.md  NEAR-TERM-EXECUTION-PLAN.md  PHASE-0-CHECKPOINT.md  README.md
scripts/: build-all.sh  cef-runtime-smoke.sh  chromium-e2e-smoke.sh  chromium-input-smoke.sh  chromium-tab-smoke.sh  chromium-text-smoke.sh  status.sh  test-smoke.sh  windows-smoke-bootstrap.ps1
spikes/cef-embedder/: CMakeLists.txt  README.md
spikes/cef-embedder/docs/: phase-1-checklist.md
spikes/cef-embedder/src/: main.cpp  main_linux.cc  main_stub.cpp  spike_app.cc  spike_app.h  spike_handler.cc  spike_handler.h
